# emergenAi

./: .gitignore  pyproject.toml
app/: config.py  database.py  exceptions.py  logger.py  main.py  redis.py
app/api/patients/: endpoints.py
app/middleware/: auth.py  rate_limiter.py
